alignment fix

--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,7 +1,3 @@
-.footer {
-    margin:auto;
-}
-
-.bgcolour {
-    background-color: rgba(0, 0, 0, 0.2);
+.marginleft {
+    margin-left: 20px;
 }
